--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -28,6 +28,45 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
   }
 }
 
+.stats{
+	text-align: center;
+}
+
+.input__container{
+	//padding-left: 20px; 
+	.input__class{
+		height:30px;
+		padding: 0;
+		//width: 98px;
+		select, input {
+			width: 100%;
+			height: 100%;
+		}
+	}
+	.input__group {
+		//padding: 0;
+		//padding-left: 5px;
+		.input__cell{
+			height:30px;
+			padding: 0;
+			select, input {
+				width: 100%;
+				height: 100%;
+			}
+		}
+	}	
+}
+
+.classes{
+	p{
+		img{
+			width: 30px;
+			height: auto;
+		}
+	}
+}
+
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
