--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -66,7 +66,9 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
 	}
 }
 
-
+.tabTop{
+	height: 300px;
+}
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your sass files automatically
